Update verifikasi.html dengan script Apps Script terbaru

--- a/keanggotaan.html
+++ b/keanggotaan.html
@@ -26,8 +26,8 @@
   </div>
 
   <script>
-    // ganti ini dengan URL Web App Google Apps Script Anda (lihat petunjuk di bawah)
-    const APPS_SCRIPT_URL = "YOUR_APPS_SCRIPT_URL"; // contoh: https://script.google.com/macros/s/AKfycbx.../exec
+    // URL Web App Google Apps Script Anda
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw-xaX8OKKxmtqcXI6QL6q0OexEoe-SgoFncpOcMOjDZkkARvg1RsNZjJujJLKJszD8RQ/exec";
 
     // helper: baca query params
     function getQueryParams(){
@@ -83,3 +83,4 @@
   </script>
 </body>
 </html>
+
