--- a/keanggotaan.html
+++ b/keanggotaan.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <div class="verify-wrap card">
+      <img src="LOGO.PNG" alt="Logo LSM RMK" class="logo" />
     <h1>Verifikasi Keanggotaan — RMK</h1>
     <p>Halaman ini menampilkan status keanggotaan berdasarkan kode di kartu anggota.</p>
     <div id="resultArea">
@@ -59,4 +60,5 @@
   </script>
 </body>
 </html>
+
 
