--- a/keanggotaan.html
+++ b/keanggotaan.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="verify-wrap card">
-      <img src="LOGO.PNG" alt="Logo LSM RMK" class="logo" />
+      <img src="logo.png" alt="Logo LSM RMK" class="logo" />
     <h1>Verifikasi Keanggotaan — RMK</h1>
     <p>Halaman ini menampilkan status keanggotaan berdasarkan kode di kartu anggota.</p>
     <div id="resultArea">
@@ -60,5 +60,6 @@
   </script>
 </body>
 </html>
+
 
 
