--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <header class="site-header">
     <div class="wrap header-inner">
       <div class="branding">
+        <img src="https://drive.google.com/file/d/1hI-7YAsmd2PVdu6UGCZwea3ehgVO1dBp/view?usp=drive_link" alt="Logo RMK" class="logo">
+  <div class="site-title">
+    <h1>LSM RAKYAT MENANTI KEADILAN</h1>
+    <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
+  </div>
+</div>
         <h1>LSM RAKYAT MENANTI KEADILAN</h1>
         <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
       </div>
@@ -263,3 +269,4 @@
   </script>
 </body>
 </html>
+
