--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <div class="wrap header-inner">
       <div class="branding">
-        <img src="https://drive.google.com/file/d/1hI-7YAsmd2PVdu6UGCZwea3ehgVO1dBp/view?usp=drive_link" alt="Logo RMK" class="logo">
+        <img src="https://i.imgur.com/GHDXmSH.png" alt="Logo RMK" class="logo">
   <div class="site-title">
     <h1>LSM RAKYAT MENANTI KEADILAN</h1>
     <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
@@ -269,4 +269,5 @@
   </script>
 </body>
 </html>
+
 
