--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <div class="wrap header-inner">
       <div class="branding">
-        <img src="https://i.imgur.com/GHDXmSH.png" alt="Logo RMK" class="logo">
+  <img src="logo.png" alt="Logo RMK" class="logo">
   <div class="site-title">
     <h1>LSM RAKYAT MENANTI KEADILAN</h1>
     <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
@@ -269,5 +269,6 @@
   </script>
 </body>
 </html>
+
 
 
