--- a/index.html
+++ b/index.html
@@ -1,197 +1,132 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>LSM RAKYAT MENANTI KEADILAN (RMK)</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Lora:wght@600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Organisasi Nirlaba</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- HEADER -->
+
+  <!-- Header -->
   <header class="site-header">
     <div class="wrap header-inner">
       <div class="branding">
-  <img src="logo.png" alt="Logo RMK" class="logo">
-  </div>
-               <div class="site-title">
-          <h1>LSM RAKYAT MENANTI KEADILAN</h1>
-          <p class="motto">"Mengabdi Sepenuh Waktu, Memahami Perbedaan"</p>
-        </div>
+        <img src="logo.png" alt="Logo Organisasi" class="logo">
+        <h1>Organisasi Nirlaba Kami</h1>
+        <p class="motto">Peduli Alam & Kemanusiaan</p>
       </div>
       <nav class="main-nav">
-        <a href="#home">Beranda</a>
         <a href="#tentang">Tentang</a>
+        <a href="#visi">Visi</a>
         <a href="#program">Program</a>
-        <a href="#anggota">Anggota</a>
         <a href="#galeri">Galeri</a>
-        <a href="#berita">Berita</a>
-        <a href="#donasi">Donasi</a>
-        <a href="#relawan">Relawan</a>
         <a href="#kontak">Kontak</a>
       </nav>
     </div>
   </header>
 
-  <!-- HERO -->
-  <section id="home" class="hero">
+  <!-- Hero -->
+  <section class="hero">
     <div class="wrap">
-      <h2>Menjembatani & Mendampingi Masyarakat</h2>
-      <p class="lead">Bergerak untuk kesejahteraan bersama yang adil berdasarkan hukum dan HAM.</p>
+      <h2>Bersama Membangun Harapan</h2>
+      <p class="lead">Kami hadir untuk melestarikan alam dan meningkatkan kesejahteraan manusia.</p>
       <div class="cta">
-        <a href="#donasi" class="btn">Donasi Sekarang</a>
-        <a href="#relawan" class="btn btn-outline">Gabung Relawan</a>
+        <a href="#program" class="btn">Lihat Program</a>
+        <a href="#kontak" class="btn btn-outline">Hubungi Kami</a>
       </div>
     </div>
   </section>
 
-  <!-- TENTANG -->
+  <!-- Tentang -->
   <section id="tentang" class="section">
     <div class="wrap">
-      <h2>Tentang RMK</h2>
-      <div class="card">
-        <p><strong>LSM RAKYAT MENANTI KEADILAN</strong> (LSM "RMK") adalah organisasi nirlaba yang berdiri di Kota Pontianak, Kalimantan Barat. RMK lahir atas kesadaran pentingnya nilai keadilan berdasarkan Pancasila butir ke-5.</p>
-        <h3>Identitas & Legal</h3>
-        <ul>
-          <li>Akta Notaris: No.06 Tanggal 05 April 2011</li>
-          <li>Nomor SKT: 00-220-00/284/bkbpb/2016</li>
-          <li>Alamat: Jl. Tekam, Komp. Griya Pratama Blok i no.5, Pontianak</li>
-        </ul>
-        <h3>Visi</h3>
-        <p>Turut mewujudkan cita-cita bangsa — masyarakat yang adil dan makmur berdasarkan Pancasila.</p>
-        <h3>Misi</h3>
-        <ol>
-          <li>Menjadi kontrol sosial terhadap perkembangan daerah.</li>
-          <li>Mengembangkan azas persaudaraan & persatuan bangsa.</li>
-          <li>Memelihara hubungan antar golongan tanpa diskriminasi.</li>
-          <li>Mengembangkan potensi masyarakat untuk pembangunan.</li>
-          <li>Membentuk klinik konsultasi & pendampingan masyarakat.</li>
-        </ol>
-      </div>
+      <h2>Tentang Kami</h2>
+      <p class="note">
+        Kami adalah organisasi nirlaba yang bergerak di bidang lingkungan dan sosial. 
+        Fokus utama kami adalah menjaga kelestarian alam sekaligus mendukung kesejahteraan masyarakat.
+      </p>
     </div>
   </section>
 
-  <!-- PROGRAM -->
-  <section id="program" class="section alt">
+  <!-- Visi -->
+  <section id="visi" class="section alt">
     <div class="wrap">
-      <h2>Program Utama</h2>
+      <h2>Visi Kami</h2>
+      <p class="note">
+        Menjadi organisasi terpercaya yang mampu menjembatani manusia dengan alam, 
+        menciptakan harmoni antara keberlanjutan lingkungan dan kemajuan sosial.
+      </p>
+    </div>
+  </section>
+
+  <!-- Program -->
+  <section id="program" class="section">
+    <div class="wrap">
+      <h2>Program & Kegiatan</h2>
       <div class="grid-3">
-        <div class="card"><h3>Pemberdayaan Masyarakat</h3><p>Pelatihan, pendampingan usaha, dan akses pasar.</p></div>
-        <div class="card"><h3>Program Sosial</h3><p>Memperkecil kesenjangan sosial dengan stakeholder.</p></div>
-        <div class="card"><h3>Klinik Konsultasi</h3><p>Pelayanan hukum, HAM, dan advokasi lingkungan.</p></div>
-        <div class="card"><h3>Kerjasama</h3><p>Kolaborasi dengan pemerintah, swasta, dan komunitas.</p></div>
-        <div class="card"><h3>Advokasi Kebijakan</h3><p>Mendorong kebijakan publik yang adil & inklusif.</p></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ANGGOTA -->
-  <section id="anggota" class="section">
-    <div class="wrap">
-      <h2>Pengurus Inti & Anggota</h2>
-      <div class="card">
-        <h3>Pengurus Inti</h3>
-        <div class="grid-4">
-          <div class="member card"><img src="img/pengurus1.jpg"><h4>Parulian Siagian</h4><p class="role">Ketua Umum</p></div>
-          <div class="member card"><img src="img/pengurus2.jpg"><h4>Peres Nikolas Siagian</h4><p class="role">Bidang Organisasi</p></div>
-          <div class="member card"><img src="img/pengurus3.jpg"><h4>Aida Riama</h4><p class="role">Sekretaris Umum</p></div>
-          <div class="member card"><img src="img/pengurus4.jpg"><h4>Mauli Simatupang</h4><p class="role">Bendahara Umum</p></div>
+        <div class="card">
+          <h3>Reboisasi</h3>
+          <p>Menanam kembali pohon di area kritis demi menjaga ekosistem.</p>
+        </div>
+        <div class="card">
+          <h3>Pendidikan Lingkungan</h3>
+          <p>Mengedukasi masyarakat tentang pentingnya menjaga alam.</p>
+        </div>
+        <div class="card">
+          <h3>Bantuan Sosial</h3>
+          <p>Mendukung masyarakat kurang mampu melalui kegiatan sosial.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- GALERI -->
+  <!-- Galeri -->
   <section id="galeri" class="section alt">
     <div class="wrap">
-      <h2>Galeri Kegiatan</h2>
+      <h2>Galeri</h2>
       <div class="gallery">
-        <img src="img/galeri1.jpg"><img src="img/galeri2.jpg">
-        <img src="img/galeri3.jpg"><img src="img/galeri4.jpg">
+        <img src="https://picsum.photos/300/200?random=1" alt="Kegiatan 1">
+        <img src="https://picsum.photos/300/200?random=2" alt="Kegiatan 2">
+        <img src="https://picsum.photos/300/200?random=3" alt="Kegiatan 3">
+        <img src="https://picsum.photos/300/200?random=4" alt="Kegiatan 4">
       </div>
     </div>
   </section>
 
-  <!-- BERITA -->
-  <section id="berita" class="section">
+  <!-- Kontak -->
+  <section id="kontak" class="section">
     <div class="wrap">
-      <h2>Berita & Artikel</h2>
-      <article class="card"><h3>Meninjau Pembangunan Jalan</h3><p>Tim RMK meninjau proyek jalan dan mencatat isu lingkungan.</p><p class="meta">15 Juli 2025</p></article>
-      <article class="card"><h3>Klinik Konsultasi Hukum</h3><p>RMK membuka layanan konsultasi HAM & hukum dasar.</p><p class="meta">2 Agustus 2025</p></article>
-    </div>
-  </section>
-
-  <!-- DONASI -->
-  <section id="donasi" class="section alt">
-    <div class="wrap">
-      <h2>Donasi</h2>
-      <div class="card">
-        <p>Semua donasi digunakan untuk program pemberdayaan masyarakat.</p>
-        <h3>Rekening</h3>
-        <p><strong>7115 0100 9150 531 (a/n Parulian Siagian)</strong></p>
-        <form id="donasiForm" class="form">
-          <label>Nama Donatur* <input type="text" name="donor_name" required></label>
-          <label>Email <input type="email" name="donor_email"></label>
-          <label>Nominal (Rp)* <input type="number" name="amount" required></label>
-          <label>Bukti Transfer <input type="text" name="proof"></label>
-          <button type="submit" class="btn">Kirim Konfirmasi</button>
+      <h2>Kontak Kami</h2>
+      <div class="contact-grid">
+        <div>
+          <p><strong>Email:</strong> info@organisasi.org</p>
+          <p><strong>Telepon:</strong> +62 812 3456 7890</p>
+          <p><strong>Alamat:</strong> Jl. Peduli Alam No. 123, Jakarta</p>
+        </div>
+        <form class="form">
+          <label>Nama<span class="required">*</span>
+            <input type="text" required>
+          </label>
+          <label>Email<span class="required">*</span>
+            <input type="email" required>
+          </label>
+          <label>Pesan
+            <textarea rows="4"></textarea>
+          </label>
+          <button type="submit" class="btn">Kirim</button>
         </form>
       </div>
     </div>
   </section>
 
-  <!-- RELAWAN -->
-  <section id="relawan" class="section">
-    <div class="wrap">
-      <h2>Daftar Relawan</h2>
-      <div class="card">
-        <form id="relawanForm" class="form">
-          <label>Nama* <input type="text" required></label>
-          <label>Email* <input type="email" required></label>
-          <label>No. Telepon* <input type="text" required></label>
-          <label>Alamat* <textarea required></textarea></label>
-          <button type="submit" class="btn">Daftar</button>
-        </form>
-      </div>
-    </div>
-  </section>
-
-  <!-- KONTAK -->
-  <section id="kontak" class="section alt">
-    <div class="wrap">
-      <h2>Kontak</h2>
-      <div class="card contact-grid">
-        <div>
-          <h3>Alamat</h3>
-          <p>Jl. Tekam Komp. Griya Pratama Blok i no.5, Pontianak</p>
-          <h3>WA</h3>
-          <p>082166039732</p>
-          <h3>Email</h3>
-          <p><a href="mailto:lsmrakyatmenantikeadilan@gmail.com">lsmrakyatmenantikeadilan@gmail.com</a></p>
-        </div>
-        <div>
-          <h3>Instagram</h3>
-          <p><a href="https://instagram.com/LSMRMKKALBAR" target="_blank">@LSMRMKKALBAR</a></p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="wrap">
-      <p>&copy; 2025 LSM RAKYAT MENANTI KEADILAN — Semua hak cipta dilindungi.</p>
+      <p>&copy; 2025 Organisasi Nirlaba Kami</p>
+      <p class="small">Bersama kita bisa menjaga alam dan membantu sesama</p>
     </div>
   </footer>
 
-  <!-- SCRIPT -->
-  <script>
-    document.getElementById('donasiForm').addEventListener('submit', function(e){
-      e.preventDefault(); alert('Terima kasih! Konfirmasi donasi diterima.'); this.reset();
-    });
-    document.getElementById('relawanForm').addEventListener('submit', function(e){
-      e.preventDefault(); alert('Terima kasih! Pendaftaran relawan diterima.'); this.reset();
-    });
-  </script>
 </body>
 </html>
