--- a/keanggotaan.html
+++ b/keanggotaan.html
@@ -1,4 +1,3 @@
-!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
@@ -16,7 +15,7 @@
 </head>
 <body>
   <div class="verify-wrap card">
-      <img src="logo.png" alt="Logo LSM RMK" class="logo" />
+    <img src="logo.png" alt="Logo LSM RMK" class="logo" />
     <h1>Verifikasi Keanggotaan — RMK</h1>
     <p>Halaman ini menampilkan status keanggotaan berdasarkan kode di kartu anggota.</p>
     <div id="resultArea">
@@ -24,8 +23,9 @@
     </div>
 
     <div class="btn-group">
-      <a href="index.html" class="btn">🏠 Kembali ke Beranda</a>
-      <a href="keanggotaan.html" class="btn">🔎 Cek Anggota Lain</a>
+      <!-- pakai link penuh biar tidak nyasar -->
+      <a href="https://lsmrakyatmenantikeadilan.github.io/lsmrakyatmenantikeadilan/" class="btn">🏠 Kembali ke Beranda</a>
+      <a href="https://lsmrakyatmenantikeadilan.github.io/lsmrakyatmenantikeadilan/keanggotaan.html" class="btn">🔎 Cek Anggota Lain</a>
     </div>
   </div>
 
@@ -60,6 +60,3 @@
   </script>
 </body>
 </html>
-
-
-
