--- a/index.html
+++ b/index.html
@@ -3,24 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Organisasi Nirlaba</title>
+  <title>LSM Rakyat Menanti Keadilan</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <!-- Header -->
   <header class="site-header">
     <div class="wrap header-inner">
       <div class="branding">
-        <img src="logo.png" alt="Logo Organisasi" class="logo">
-        <h1>Organisasi Nirlaba Kami</h1>
-        <p class="motto">Peduli Alam & Kemanusiaan</p>
+        <img src="logo.png" alt="Logo RMK" class="logo">
+        <div class="site-title">
+          <h1>LSM RAKYAT MENANTI KEADILAN</h1>
+          <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
+        </div>
       </div>
       <nav class="main-nav">
-        <a href="#tentang">Tentang</a>
-        <a href="#visi">Visi</a>
+        <a href="#tentang">Tentang Kami</a>
         <a href="#program">Program</a>
+        <a href="#anggota">Anggota</a>
         <a href="#galeri">Galeri</a>
+        <a href="#berita">Berita</a>
+        <a href="#donasi">Donasi</a>
+        <a href="#relawan">Relawan</a>
         <a href="#kontak">Kontak</a>
       </nav>
     </div>
@@ -29,93 +33,191 @@
   <!-- Hero -->
   <section class="hero">
     <div class="wrap">
-      <h2>Bersama Membangun Harapan</h2>
-      <p class="lead">Kami hadir untuk melestarikan alam dan meningkatkan kesejahteraan manusia.</p>
+      <h2>Menjembatani & Mendampingi Masyarakat dan Stakeholder</h2>
+      <p class="lead">Untuk kesejahteraan bersama yang adil berdasarkan hukum dan HAM.</p>
       <div class="cta">
-        <a href="#program" class="btn">Lihat Program</a>
-        <a href="#kontak" class="btn btn-outline">Hubungi Kami</a>
+        <a href="#tentang" class="btn">Pelajari Lebih Lanjut</a>
+        <a href="#donasi" class="btn btn-outline">Dukung Kami</a>
       </div>
     </div>
   </section>
 
   <!-- Tentang -->
-  <section id="tentang" class="section">
+  <section id="tentang" class="section alt">
     <div class="wrap">
       <h2>Tentang Kami</h2>
-      <p class="note">
-        Kami adalah organisasi nirlaba yang bergerak di bidang lingkungan dan sosial. 
-        Fokus utama kami adalah menjaga kelestarian alam sekaligus mendukung kesejahteraan masyarakat.
+      <p>
+        LSM Rakyat Menanti Keadilan merupakan Organisasi Nirlaba yang berdiri di Kota Pontianak, Kalimantan Barat.
+        Lahir dengan kesadaran pentingnya nilai keadilan berdasarkan Pancasila butir ke-5, yaitu "Keadilan bagi seluruh rakyat Indonesia".
       </p>
-    </div>
-  </section>
-
-  <!-- Visi -->
-  <section id="visi" class="section alt">
-    <div class="wrap">
-      <h2>Visi Kami</h2>
-      <p class="note">
-        Menjadi organisasi terpercaya yang mampu menjembatani manusia dengan alam, 
-        menciptakan harmoni antara keberlanjutan lingkungan dan kemajuan sosial.
-      </p>
+      <h3>Visi</h3>
+      <p>Turut mewujudkan cita-cita bangsa dan negara, yaitu masyarakat yang adil dan makmur berdasarkan Pancasila.</p>
+      <h3>Misi</h3>
+      <ul>
+        <li>Kontrol sosial dalam bidang lingkungan, pertanian, pendidikan, sosial, hukum, dan HAM.</li>
+        <li>Mengembangkan rasa persaudaraan, persatuan, dan kesatuan bangsa.</li>
+        <li>Memelihara hubungan antar semua golongan masyarakat tanpa memandang suku, agama, dan ras.</li>
+        <li>Mendorong masyarakat aktif dalam pembangunan nasional.</li>
+        <li>Meningkatkan kerja sama dalam pengabdian kepada masyarakat.</li>
+      </ul>
+      <h3>Struktur Organisasi</h3>
+      <ul>
+        <li>Ketua Umum: Parulian Siagian</li>
+        <li>Sekretaris Umum: Aida Riama</li>
+        <li>Bendahara Umum: Mauli Simatupang</li>
+      </ul>
     </div>
   </section>
 
   <!-- Program -->
   <section id="program" class="section">
     <div class="wrap">
-      <h2>Program & Kegiatan</h2>
+      <h2>Program Kami</h2>
       <div class="grid-3">
         <div class="card">
-          <h3>Reboisasi</h3>
-          <p>Menanam kembali pohon di area kritis demi menjaga ekosistem.</p>
+          <h3>Pemberdayaan Masyarakat</h3>
+          <p>Memberdayakan masyarakat agar menjadi potensi nasional.</p>
         </div>
         <div class="card">
-          <h3>Pendidikan Lingkungan</h3>
-          <p>Mengedukasi masyarakat tentang pentingnya menjaga alam.</p>
+          <h3>Kegiatan Sosial</h3>
+          <p>Memperkecil kesenjangan sosial melalui kegiatan internal maupun kolaborasi.</p>
         </div>
         <div class="card">
-          <h3>Bantuan Sosial</h3>
-          <p>Mendukung masyarakat kurang mampu melalui kegiatan sosial.</p>
+          <h3>Klinik Konsultasi</h3>
+          <p>Mendampingi masyarakat di bidang lingkungan hidup, pertanian, pendidikan, sosial, dan HAM.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Galeri -->
-  <section id="galeri" class="section alt">
+  <!-- Anggota -->
+  <section id="anggota" class="section alt">
     <div class="wrap">
-      <h2>Galeri</h2>
+      <h2>Data Anggota</h2>
+      <table class="members-table">
+        <thead>
+          <tr>
+            <th>Nama</th>
+            <th>Jabatan</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Parulian Siagian</td>
+            <td>Ketua Umum</td>
+          </tr>
+          <tr>
+            <td>Peres Nikolas Siagian</td>
+            <td>Ketua Bidang Organisasi</td>
+          </tr>
+          <tr>
+            <td>Aida Riama</td>
+            <td>Sekretaris Umum</td>
+          </tr>
+          <tr>
+            <td>Ervina</td>
+            <td>Sekretaris I</td>
+          </tr>
+          <tr>
+            <td>Mauli Simatupang</td>
+            <td>Bendahara Umum</td>
+          </tr>
+        </tbody>
+      </table>
+      <p class="note">Anggota baru akan diverifikasi melalui halaman <a href="keanggotaan.html">Keanggotaan Terverifikasi</a>.</p>
+    </div>
+  </section>
+
+  <!-- Galeri -->
+  <section id="galeri" class="section">
+    <div class="wrap">
+      <h2>Galeri Kegiatan</h2>
       <div class="gallery">
         <img src="https://picsum.photos/300/200?random=1" alt="Kegiatan 1">
         <img src="https://picsum.photos/300/200?random=2" alt="Kegiatan 2">
         <img src="https://picsum.photos/300/200?random=3" alt="Kegiatan 3">
-        <img src="https://picsum.photos/300/200?random=4" alt="Kegiatan 4">
       </div>
+    </div>
+  </section>
+
+  <!-- Berita -->
+  <section id="berita" class="section alt">
+    <div class="wrap">
+      <h2>Berita & Artikel</h2>
+      <div class="grid-3">
+        <div class="card">
+          <h3>Peninjauan Pembangunan Jalan</h3>
+          <p>LSM RMK meninjau pembangunan jalan di wilayah Kalbar yang menjadi isu masyarakat.</p>
+        </div>
+        <div class="card">
+          <h3>Sosialisasi HAM</h3>
+          <p>Mengadakan kegiatan sosialisasi tentang hak asasi manusia di masyarakat.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Donasi -->
+  <section id="donasi" class="section">
+    <div class="wrap">
+      <h2>Donasi</h2>
+      <p>Anda dapat berdonasi melalui rekening berikut:</p>
+      <p><strong>Bank:</strong> BRI</p>
+      <p><strong>No. Rekening:</strong> 7115 0100 9150 531</p>
+      <p><strong>a/n:</strong> Parulian Siagian</p>
+    </div>
+  </section>
+
+  <!-- Relawan -->
+  <section id="relawan" class="section alt">
+    <div class="wrap">
+      <h2>Formulir Relawan</h2>
+      <form class="form">
+        <label>Nama Lengkap <span class="required">*</span>
+          <input type="text" required>
+        </label>
+        <label>Email Aktif <span class="required">*</span>
+          <input type="email" required>
+        </label>
+        <label>Nomor Telepon / WhatsApp <span class="required">*</span>
+          <input type="text" required>
+        </label>
+        <label>Alamat Lengkap <span class="required">*</span>
+          <textarea required></textarea>
+        </label>
+        <label>Bidang Minat Relawan <span class="required">*</span></label>
+        <div class="checkbox-group">
+          <label><input type="checkbox"> Lingkungan</label>
+          <label><input type="checkbox"> Pertanian</label>
+          <label><input type="checkbox"> Pendidikan</label>
+          <label><input type="checkbox"> Sosial</label>
+          <label><input type="checkbox"> Hukum</label>
+          <label><input type="checkbox"> HAM</label>
+        </div>
+        <label>Pengalaman / Keterampilan
+          <textarea></textarea>
+        </label>
+        <label>Alasan Ingin Bergabung <span class="required">*</span>
+          <textarea required></textarea>
+        </label>
+        <button type="submit" class="btn">Kirim</button>
+      </form>
     </div>
   </section>
 
   <!-- Kontak -->
   <section id="kontak" class="section">
     <div class="wrap">
-      <h2>Kontak Kami</h2>
+      <h2>Kontak</h2>
       <div class="contact-grid">
         <div>
-          <p><strong>Email:</strong> info@organisasi.org</p>
-          <p><strong>Telepon:</strong> +62 812 3456 7890</p>
-          <p><strong>Alamat:</strong> Jl. Peduli Alam No. 123, Jakarta</p>
+          <p>Email: <a href="mailto:lsmrakyatmenantikeadilan@gmail.com">lsmrakyatmenantikeadilan@gmail.com</a></p>
+          <p>Telepon/WA: 082166039732</p>
+          <p>Alamat: Jl. Tekam Komp. Griya Pratama Blok i no.5, Pontianak</p>
         </div>
-        <form class="form">
-          <label>Nama<span class="required">*</span>
-            <input type="text" required>
-          </label>
-          <label>Email<span class="required">*</span>
-            <input type="email" required>
-          </label>
-          <label>Pesan
-            <textarea rows="4"></textarea>
-          </label>
-          <button type="submit" class="btn">Kirim</button>
-        </form>
+        <div>
+          <p>Instagram: <a href="https://instagram.com/LSMRMKKALBAR">@LSMRMKKALBAR</a></p>
+        </div>
       </div>
     </div>
   </section>
@@ -123,10 +225,10 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="wrap">
-      <p>&copy; 2025 Organisasi Nirlaba Kami</p>
-      <p class="small">Bersama kita bisa menjaga alam dan membantu sesama</p>
+      <p>&copy; 2025 LSM Rakyat Menanti Keadilan</p>
+      <p class="small">Mengabdi Sepenuh Waktu Memahami Perbedaan</p>
     </div>
   </footer>
-
 </body>
 </html>
+
