--- a/keanggotaan.html
+++ b/keanggotaan.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
@@ -15,7 +16,7 @@
 </head>
 <body>
   <div class="verify-wrap card">
-    <img src="logo.png" alt="Logo LSM RMK" class="logo" />
+      <img src="logo.png" alt="Logo LSM RMK" class="logo" />
     <h1>Verifikasi Keanggotaan — RMK</h1>
     <p>Halaman ini menampilkan status keanggotaan berdasarkan kode di kartu anggota.</p>
     <div id="resultArea">
@@ -23,9 +24,9 @@
     </div>
 
     <div class="btn-group">
-      <!-- pakai link penuh biar tidak nyasar -->
+      <!-- Tombol resmi kembali ke beranda -->
       <a href="https://lsmrakyatmenantikeadilan.github.io/lsmrakyatmenantikeadilan/" class="btn">🏠 Kembali ke Beranda</a>
-      <a href="https://lsmrakyatmenantikeadilan.github.io/lsmrakyatmenantikeadilan/keanggotaan.html" class="btn">🔎 Cek Anggota Lain</a>
+      <a href="keanggotaan.html" class="btn">🔎 Cek Anggota Lain</a>
     </div>
   </div>
 
