--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <header class="site-header">
   <div class="wrap header-inner">
     <div class="branding">
-      <img src="img/logo.png" alt="Logo RMK" class="logo">
+      <img src="logo.png" alt="Logo RMK" class="logo">
       <div class="branding-text">
         <h1>LSM RAKYAT MENANTI KEADILAN</h1>
         <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
@@ -282,6 +282,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
