--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     .wrap {max-width:1100px; margin:0 auto; padding:0 20px;}
 
    <header class="site-header">
-  <div class="wrap header-inner">
-    <div class="branding">
-      <img src="logo.png" alt="Logo RMK" class="logo">
-      <div class="branding-text">
-        <h1>LSM RAKYAT MENANTI KEADILAN</h1>
-        <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
-      </div>
-    </div>
-    <nav class="main-nav">
+ <div class="branding">
+  <img src="logo.png" alt="Logo RMK" class="logo">
+  <div class="site-title">
+    <h1>LSM RAKYAT MENANTI KEADILAN</h1>
+    <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
+  </div>
+</div>
+    
+ <nav class="main-nav">
       <a href="#home">Beranda</a>
       <a href="#tentang">Tentang</a>
       <a href="#program">Program</a>
@@ -282,6 +282,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
