--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     body {font-family: 'Poppins', sans-serif; margin:0; line-height:1.6; color:#333;}
     .wrap {max-width:1100px; margin:0 auto; padding:0 20px;}
 
-  <header class="site-header">
+ <header class="site-header">
   <div class="branding">
-    <img src="logo.png" alt="Logo RMK" class="logo">
-    <div class="site-title">
-      <h1>LSM RAKYAT MENANTI KEADILAN</h1>
-      <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
-    </div>
+    <img src="logo.png" alt="Logo RMK" style="width:120px; height:auto; display:block;">
+    <h1>LSM RAKYAT MENANTI KEADILAN</h1>
+    <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
   </div>
 </header>
+
  <nav class="main-nav">
       <a href="#home">Beranda</a>
       <a href="#tentang">Tentang</a>
@@ -282,6 +281,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
