--- a/index.html
+++ b/index.html
@@ -9,31 +9,6 @@
     body {font-family: 'Poppins', sans-serif; margin:0; line-height:1.6; color:#333;}
     .wrap {max-width:1100px; margin:0 auto; padding:0 20px;}
 
- </head>
-<body>
-  <header class="site-header">
-    <div class="wrap header-inner">
-      <div class="branding">
-        <img src="logo.png" alt="Logo RMK" style="width:120px; height:auto; display:block;">
-        <h1>LSM RAKYAT MENANTI KEADILAN</h1>
-        <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
-      </div>
-    
- <nav class="main-nav">
-      <a href="#home">Beranda</a>
-      <a href="#tentang">Tentang</a>
-      <a href="#program">Program</a>
-      <a href="#anggota">Anggota</a>
-      <a href="#galeri">Galeri</a>
-      <a href="#berita">Berita</a>
-      <a href="#donasi">Donasi</a>
-      <a href="#relawan">Relawan</a>
-      <a href="#kontak">Kontak</a>
-    </nav>
-  </div>
-</header>
-
-
     /* HERO */
     .hero {background:#e9f9f3; padding:60px 20px; text-align:center;}
     .hero h2 {font-size:28px; margin-bottom:10px;}
@@ -76,12 +51,17 @@
     /* FOOTER */
     .site-footer {background:#0a8547; color:#fff; text-align:center; padding:20px;}
     .note, .small {font-size:14px; color:#666;}
+
+    /* LOGO */
+    .logo {width:120px; height:auto; display:block; margin-bottom:10px;}
   </style>
 </head>
 <body>
   <header class="site-header">
     <div class="wrap header-inner">
       <div class="branding">
+        <!-- LOGO DISINI -->
+        <img src="logo.png" alt="Logo RMK" class="logo">
         <h1>LSM RAKYAT MENANTI KEADILAN</h1>
         <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
       </div>
@@ -273,22 +253,15 @@
           <p>Instagram: <a href="https://instagram.com/LSMRMKKALBAR" target="_blank">@LSMRMKKALBAR</a></p>
           <p>Facebook / Twitter / YouTube: diari rmk </p>
           <h3>Jam Operasional</h3><p>Senin–Jumat:08.00-17.00
+        </div>
+      </div>
+    </div>
+  </section>
 
-              <!-- Footer -->
+  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="wrap">
       <p>&copy; 2025 LSM Rakyat Menanti Keadilan</p>
       <p class="small">Mengabdi Sepenuh Waktu Memahami Perbedaan</p>
     </div>
-  </footer>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
+Baik, aku kasih yang **FULL index.html** ya, tanpa mengubah isi yang sudah kamu punya. Jadi aku hanya pastikan logonya (`logo.png`)
