--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
         RMK berperan dalam menjembatani serta mendampingi masyarakat dan stakeholder guna kesejahteraan bersama 
         yang adil berdasarkan hukum dan HAM.
       </p>
+
+      <!-- Biodata -->
+      <h3>Biodata LSM RMK</h3>
+      <ul>
+        <li><strong>Nama Lengkap:</strong> LSM "Rakyat Menanti Keadilan"</li>
+        <li><strong>Disingkat:</strong> LSM-RMK</li>
+        <li><strong>Akta Notaris / Badan Hukum:</strong> No.06 Tanggal 5 April 2011</li>
+        <li><strong>Nomor SKT:</strong> 00-220-00/284/BKBPB/2016</li>
+        <li><strong>Nomor NPWP:</strong> 03.141.-465.9-701.000.</li>
+        <li><strong>Alamat:</strong> Jl. Tekam, Komp. Griya Pratama Blok i No.5, Pontianak</li>
+      </ul>
     </section>
 
     <!-- Visi & Misi -->
@@ -72,102 +83,4 @@
     <section id="program" class="card">
       <h2>Program Kerja</h2>
       <ol>
-        <li>Memberdayakan masyarakat agar menjadi potensi nasional.</li>
-        <li>Melaksanakan usaha sosial kemasyarakatan untuk memperkecil kesenjangan sosial.</li>
-        <li>Bekerjasama dengan instansi pemerintah, swasta, serta badan sosial lainnya.</li>
-        <li>Mendukung program pemerintah dalam pembangunan dan menjadi lembaga sosial kontrol.</li>
-        <li>Membentuk klinik konsultasi dan pendampingan masyarakat di bidang lingkungan, pertanian, perkebunan, pendidikan, sosial, dan HAM.</li>
-      </ol>
-    </section>
-
-    <!-- Anggota -->
-    <section id="anggota" class="card">
-      <h2>Anggota Inti</h2>
-      <table>
-        <tr><th>Nama</th><th>Jabatan</th></tr>
-        <tr><td>Parulian Siagian</td><td>Ketua Umum</td></tr>
-        <tr><td>Mauli Simatupang</td><td>Bendahara Umum</td></tr>
-        <tr><td>Aida Riama</td><td>Sekretaris Umum</td></tr>
-        <tr><td>Peres Nikolas Siagian</td><td>Ketua Bidang Organisasi</td></tr>
-        <tr><td>Ervina</td><td>Sekretaris I</td></tr>
-      </table>
-      <p><a href="keanggotaan.html" class="btn">🔎 Verifikasi Keanggotaan</a></p>
-    </section>
-
-    <!-- Galeri -->
-    <section id="galeri" class="card">
-      <h2>Galeri</h2>
-      <p><em>Foto kegiatan akan ditampilkan di sini.</em></p>
-      <img src="https://via.placeholder.com/400x250?text=Foto+Kegiatan+1" alt="Foto Kegiatan 1">
-    </section>
-
-    <!-- Berita -->
-    <section id="berita" class="card">
-      <h2>Berita & Artikel</h2>
-      <article>
-        <h3>Meninjau Pembangunan Jalan di Kalbar</h3>
-        <p>LSM RMK turut hadir meninjau pembangunan jalan di wilayah Kalimantan Barat yang menjadi isu penting di tengah masyarakat.</p>
-      </article>
-    </section>
-
-    <!-- Donasi -->
-    <section id="donasi" class="card">
-      <h2>Donasi</h2>
-      <p>Dukung kegiatan kami melalui donasi ke rekening berikut:</p>
-      <p><strong>7115 0100 9150 531</strong> a/n Parulian Siagian</p>
-      <p>Konfirmasi donasi dapat dikirim melalui email atau WhatsApp.</p>
-    </section>
-
-    <!-- Relawan -->
-    <section id="relawan" class="card">
-      <h2>Relawan</h2>
-      <form>
-        <label>Nama Lengkap*</label><br>
-        <input type="text" required><br><br>
-
-        <label>Email*</label><br>
-        <input type="email" required><br><br>
-
-        <label>Nomor Telepon / WhatsApp*</label><br>
-        <input type="text" required><br><br>
-
-        <label>Alamat Lengkap*</label><br>
-        <textarea required></textarea><br><br>
-
-        <label>Bidang Minat Relawan*</label><br>
-        <select required>
-          <option>Lingkungan</option>
-          <option>Pertanian</option>
-          <option>Pendidikan</option>
-          <option>Sosial</option>
-          <option>Hukum</option>
-          <option>HAM</option>
-        </select><br><br>
-
-        <label>Pengalaman / Keterampilan</label><br>
-        <textarea></textarea><br><br>
-
-        <label>Alasan Bergabung*</label><br>
-        <textarea required></textarea><br><br>
-
-        <button type="submit" class="btn">Daftar Relawan</button>
-      </form>
-    </section>
-
-    <!-- Kontak -->
-    <section id="kontak" class="card">
-      <h2>Kontak</h2>
-      <p>Email: <a href="mailto:lsmrakyatmenantikeadilan@gmail.com">lsmrakyatmenantikeadilan@gmail.com</a></p>
-      <p>Telepon/WA: 082166039732</p>
-      <p>Alamat: Jl. Tekam, Komp. Griya Pratama Blok i no.5, Pontianak</p>
-      <p>Instagram: <a href="https://instagram.com/LSMRMKKALBAR" target="_blank">@LSMRMKKALBAR</a></p>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 LSM Rakyat Menanti Keadilan. Semua Hak Dilindungi.</p>
-  </footer>
-</body>
-</html>
-
+        <li>Memberdayakan ma
